[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.86.0"
license = "GPL-3.0"
authors = ["Victor Pogor"]
repository = "https://github.com/pogor-dev/os"

[workspace.dependencies]
# non-local crates

# local crates
kernel = { path = "./crates/kernel", version = "0.0.0" }


[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

too_long_first_doc_paragraph = "allow"
single_match = "allow"
result_unit_err = "allow"
len_without_is_empty = "allow"
enum_variant_names = "allow"
new_ret_no_self = "allow"
useless_asref = "allow"
assigning_clones = "allow"
vec_init_then_push = "allow"
literal_string_with_formatting_args = "allow"
unnecessary_map_or = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
wrong_self_convention = "allow"
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"
rc_buffer = "warn"
str_to_string = "warn"
