[package]
name = "xtask"
version = "0.0.0"
description = "Xtask for Pogor OS"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# non-local crates
anyhow.workspace = true
duct.workspace = true
bootloader.workspace = true

# local crates

[dev-dependencies]
# non-local crates

# local crates

[lints]
workspace = true
